@@ -326,13 +326,13 @@ $result_menus{'unnumbered_before_node_top_top'} = {
 
 $result_errors{'unnumbered_before_node_top_top'} = [
   {
-    'error_line' => ':6: lowering the section level of @top appearing after a lower element
+    'error_line' => ':6: warning: lowering the section level of @top appearing after a lower element
 ',
     'file_name' => '',
     'line_nr' => 6,
     'macro' => '',
     'text' => 'lowering the section level of @top appearing after a lower element',
-    'type' => 'error'
+    'type' => 'warning'
   }
 ];
 
