@@ -1,4 +1,4 @@
 index_no_node.texi:5: warning: entry for index `cp' outside of any node
 index_no_node.texi:7: warning: printindex before document beginning: @printindex cp
 index_no_node.texi:11: unknown index `bidule' in @printindex
-index_no_node.texi:19: lowering the section level of @top appearing after a lower element
+index_no_node.texi:19: warning: lowering the section level of @top appearing after a lower element
