@@ -2,7 +2,7 @@ texi2any: warning: ignoring splitting for format Info
 index_no_node.texi:5: warning: entry for index `cp' outside of any node
 index_no_node.texi:7: warning: printindex before document beginning: @printindex cp
 index_no_node.texi:11: unknown index `bidule' in @printindex
-index_no_node.texi:19: lowering the section level of @top appearing after a lower element
+index_no_node.texi:19: warning: lowering the section level of @top appearing after a lower element
 index_no_node.texi: warning: document without nodes
 index_no_node.texi:43: warning: entry for index `cp' outside of any node
 index_no_node.texi:47: warning: entry for index `cp' outside of any node
